# parcel-feasibility-engine

./: .dockerignore  .env.example  .gitignore  AB2011_API_EXAMPLES.md  AB2011_Corridor_Tier_Mapping_Research.md  AB2011_IMPLEMENTATION_REPORT.md  AB2011_QUICK_REFERENCE.md  AUTHENTICATION_SETUP.md  BERGAMOT_IMPLEMENTATION_SUMMARY.md  BERGAMOT_QUICK_REFERENCE.md  CALIFORNIA_ENVIRONMENTAL_GIS_DATA_SOURCES.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  Dockerfile  ECONOMIC_FEASIBILITY.md  ECONOMIC_FEASIBILITY_QUICKSTART.md  FRONTEND_README.md  GIS_CLIENT_IMPLEMENTATION.md  GIS_IMPLEMENTATION_SUMMARY.md  GIS_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  Makefile  PAYMENT_INTEGRATION_SUMMARY.md  POC_RESULTS.md  POSTGRES_MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  RATE_LIMITING_SUMMARY.md  README.md  SENTRY_DSN_SETUP.md  SENTRY_QUICK_REFERENCE.md  SENTRY_SETUP_COMPLETE.md  SENTRY_SETUP_GUIDE.md  SYSTEM_STATUS.md  TECHNICAL_DEBT_COMPLETION.md  TESTING_GUIDE.md  (+16 more)
.claude/: QUICK_START.md
.devcontainer/: devcontainer.json
alembic/: env.py
app/: CLAUDE.md  __init__.py  main.py
data/: README.md  ami_limits_2025.csv
docs/: DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  RHNA_API_RESEARCH.md  RHNA_INTEGRATION.md  TESTING.md  economic_feasibility_models_summary.md  gis_caching_implementation.md  redis_upgrade.md  rent_control_integration.md  tier_standards_citations_needed.md
examples/: feasibility_analysis_example.json  feasibility_request_example.json
frontend/: CLAUDE.md  SENTRY_SETUP.md  (+13 more)
(+172 files in other folders)
